# timezone-data-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release-plz.yml  test.yml
src/: db.rs  error.rs  generated.rs  lib.rs  meta.rs  parse.rs  posix.rs  zipstore.rs  zone.rs
tests/: allzones.rs  diff_go.rs  error.rs  go_expected.csv  meta.rs  posix.rs  zone.rs
xtask/: Cargo.toml
xtask/src/: main.rs
