[package]
name = "timezone-data"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
description = "no_std, no-alloc parser for embedded IANA TZif timezone data: transitions, zone types, POSIX TZ rules, leap seconds, and zone metadata."
repository = "https://github.com/KarpelesLab/timezone-data-rs"
keywords = ["timezone", "tzdata", "tzif", "iana", "no_std"]
categories = ["date-and-time", "no-std", "parser-implementations"]
readme = "README.md"
# The published crate ships the pre-extracted TZif files (src/zoneinfo/ +
# src/generated.rs); the zip and the generator are build-time-only.
exclude = ["/.github", "/xtask", "/zoneinfo.zip"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[workspace]
members = ["xtask"]
resolver = "2"
